# utipy

./: CHANGELOG.md  CHANGELOG.rst  LICENSE  LICENSE.txt  README.md  README.rst  pyproject.toml  setup.py
tests/: test_array_blend.py  test_array_window.py  test_array_windowed_reverse.py  test_pandas_drop.py  test_pandas_makes_up.py  test_pandas_polynomializer.py
tests/array/: test_blend.py  test_nan_stats.py  test_window.py
tests/groups/: test_grouping.py
tests/pandas/: test_distort.py  test_drop.py  test_makes_up.py  test_move_column_inplace.py  test_polynomializer.py  test_resemble.py
tests/path/: test_in_out_paths.py
tests/string/: test_letter_strings.py
tests/time/: test_formatters.py  test_steptimer.py  test_timestamps.py
tests/utils/: test_messenger.py  test_recursive_attributes.py
utipy/: __init__.py  about.py
utipy/array/: __init__.py  blend.py  nan_stats.py  window.py  windowed_reverse.py
utipy/groups/: __init__.py  fold.py  group.py  group_uniques.py  partition.py
utipy/groups/methods/: __init__.py  l_sizes.py  n_dist.py
utipy/helpers/: __init__.py  check_instance.py  convert_to_df.py  convert_to_type.py  extended_describe.py
utipy/measures/: __init__.py  iqr.py
utipy/pandas/: __init__.py  distort.py  drop.py  makes_up.py  move_column_inplace.py  polynomializer.py  regenerate.py  regenerate_as_noise.py  resemble.py  sim_noise_data.py  subset_by_levels.py
utipy/path/: __init__.py  in_out_paths.py  iopaths.py  mk_dir.py  mk_rm_dir.py  prepare_paths.py
utipy/string/: __init__.py  letter_strings.py  random_strings.py  string_utils.py
utipy/time/: __init__.py  format_time.py  timer.py  timestamps.py
utipy/utils/: __init__.py  check_instance.py  convert_to_df.py  convert_to_type.py  extended_describe.py  messenger.py  recursive_attributes.py  step_idx.py
