[tool.poetry]
name = "utipy"
version = "1.0.1"
description = "Utility functions for python"
authors = ["Ludvig Renbo Olsen <mail@ludvigolsen.dk>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ludvigolsen/utipy"
keywords = [
    "pandas",
    "numpy",
    "array",
    "ndarray",
    "groups",
    "folds",
    "kfold",
    "partitioning",
    "utilities",
    "tools",
    "rolling",
    "windows",
    "time"
]

[tool.poetry.urls]
issues = "https://github.com/ludvigolsen/utipy/issues"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.5.3"
numpy = "^1.24.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
