[tool.poetry]
name = "utipy"
version = "1.0.4"
description = "Utility functions for python"
authors = ["Ludvig Renbo Olsen <mail@ludvigolsen.dk>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ludvigolsen/utipy"
keywords = [
    "pandas",
    "numpy",
    "array",
    "ndarray",
    "groups",
    "folds",
    "kfold",
    "partitioning",
    "utilities",
    "logging",
    "time",
    "tools",
    "rolling",
    "windows",
    "time"
]

[tool.poetry.urls]
issues = "https://github.com/ludvigolsen/utipy/issues"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.3.5"
numpy = "^1.21.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]