[project]
name = "utipy"
version = "1.0.5"
description = "Utility functions for python"
authors = [{name = "Ludvig", email = "<mail@ludvigolsen.dk>"}]
license = "MIT"
readme = "README.md"
keywords = [
    "pandas",
    "numpy",
    "array",
    "ndarray",
    "groups",
    "folds",
    "kfold",
    "partitioning",
    "utilities",
    "logging",
    "time",
    "tools",
    "rolling",
    "windows",
    "time"
]

[project.urls]
Repository = "https://github.com/ludvigolsen/utipy"
Issues = "https://github.com/ludvigolsen/utipy/issues"
Changelog = "https://github.com/ludvigolsen/utipy/blob/main/CHANGELOG.md"

[tool.poetry]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.3.5"
numpy = "^1.21.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]